security_groups.json
{"SecurityGroups": [{"Description": "KentDefaultDMZ_ssh_http", "GroupName": "KentDefaultDMZ", "IpPermissions": [{"FromPort": 80, "IpProtocol": "tcp", "IpRanges": [{"CidrIp": "0.0.0.0/0", "Description": "http"}], "Ipv6Ranges": [{"CidrIpv6": "::/0", "Description": "http"}], "PrefixListIds": [], "ToPort": 80, "UserIdGroupPairs": []}, {"FromPort": 22, "IpProtocol": "tcp", "IpRanges": [{"CidrIp": "0.0.0.0/0", "Description": "ssh"}], "Ipv6Ranges": [], "PrefixListIds": [], "ToPort": 22, "UserIdGroupPai [...]
